ghc-4335c07/testsuite/tests/parser/should_compile/read064.hs

module Foo where

{-# THISISATYPO foo #-}
foo :: ()
foo = ()

