ghc-4335c07/testsuite/tests/parser/should_fail/ParserNoBinaryLiterals1.hs
module ParserNoBinaryLiterals1 where

f :: Int -> ()
f 0b0 = ()
f _   = ()
